--- a/Client/res/layout/list_row.xml
+++ b/Client/res/layout/list_row.xml
@@ -17,8 +17,8 @@
     
     <TextView
         android:id="@+id/heading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:paddingTop="10dp"
         android:singleLine="true"
         android:textSize="16sp"
@@ -27,16 +27,16 @@
 
     <TextView
         android:id="@+id/content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginTop="5dip"
         android:textSize="14sp"
         android:textColor="@color/red" />
 
     <TextView
         android:id="@+id/suggestion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:textSize="18sp"
         android:textColor="@android:color/black" />
     
